// table, select the proper icon (see legend at the bottom of this documents)
// and adapt the link to point to your pull request. Please dont forget
// the empty line separators.

////
| 🎁🐛🐣🗑️✨
|
| https://github.com/knative/client/pull/[#]
////

### Unreleased
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐣
| Add function ResolvePodSpec and move the utilities to podspec_helper
| https://github.com/knative/client/pull/1024[#1024]

| 🐛
| Fix various misspellings and linter items
| https://github.com/knative/client/pull/1057[#1057]


| 🎁
| Add Aliases to Help Command and Remove Aliases in Short
| https://github.com/knative/client/pull/1055[#1055]

| 🎁
| Add WithLabel list filter to serving client lib
| https://github.com/knative/client/pull/1054[#1054]
|===

## v0.18.1 (2020-10-13)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add WithLabel list filter to serving client lib
| https://github.com/knative/client/pull/1054[#1054]

| 🐛
| Fix for test flake when sync waiting and an intermediate error occurs
| https://github.com/knative/client/pull/1052[#1052]
|===

## v0.17.2 (2020-10-12)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add WithLabel list filter to serving client lib
| https://github.com/knative/client/pull/1054[#1054]

| 🐛
| Fix for test flake when sync waiting and an intermediate error occurs
| https://github.com/knative/client/pull/1052[#1052]
|===

## v0.18.0 (2020-10-07)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add aliases for commands (plural forms, `ksvc`, `ls`)
| https://github.com/knative/client/pull/1041[#1041]

| 🎁
| Add `--annotation-service` and `--annotation-revision` to `kn service create/update`
| https://github.com/knative/client/pull/1029[#1029]

| 🎁
| Add `channel list-types` command
| https://github.com/knative/client/pull/1027[#1027]

| ✨
| Update Knative Serving and Eventing dependencies to 0.18