@@ -24,7 +24,7 @@ import (
 )
 
 // DescribeSink prints the given 'sink' for the given prefix writer 'dw',
-// provide 'attribute' to print the section heading for this sink
+// provide 'attribute' to print the section heading for this sink,
 func DescribeSink(dw printers.PrefixWriter, attribute, namespace string, sink *duckv1.Destination) {
 	if sink == nil {
 		return
